--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Sakthi Shivan",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.7",
+    "@dotenvx/dotenvx": "^1.48.4",
     "google-auth-library": "^9.15.1",
     "google-spreadsheet": "^4.1.4"
   }
